--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tadasm",
+  "name": "innovamed",
   "version": "1.0.0",
-  "description": "WordPress theme for tadasm.lt website",
+  "description": "WordPress theme for innovamed.lt website",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --colors --watch --mode development",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/irmantastam/tadasm.git"
+    "url": "git+https://github.com/irmantastam/innovamed.git"
   },
   "keywords": [
     "wordpress",
@@ -25,9 +25,9 @@
   "author": "Irmantas Tamašauskas",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/irmantastam/tadasm/issues"
+    "url": "https://github.com/irmantastam/innovamed/issues"
   },
-  "homepage": "https://github.com/irmantastam/tadasm#readme",
+  "homepage": "https://github.com/irmantastam/innovamed#readme",
   "devDependencies": {
     "autoprefixer": "6.5.3",
     "babel-core": "^6.26.3",
